--- a/MultiStringMultiFileSearcher/appsettings.json
+++ b/MultiStringMultiFileSearcher/appsettings.json
@@ -1,13 +1,12 @@
 ﻿{
   "AppConfig": {
-    "GraphDbUrl": "http://localhost:7474/db/data/",
-    "GraphDbUsername": "neo4j",
-    "GraphDbPassword": "password",
-    "RootDirectory": "c:\\git\\streams",
-    "SearchDbObjects": true,
-    "SearchWebServices": true,
-    "SearchSoftwareProjects": true,
-    "SearchHistoricalServer": false,
-    "SearchBi": false
+    "SearchDirectory": "",
+    "InputFile": "input.txt",
+    "ExcludedFolders": [
+
+    ],
+    "FileExtensions": [
+
+    ]
   }
 }
